--- a/src/main/resources/templates/chat/roomdetail.html
+++ b/src/main/resources/templates/chat/roomdetail.html
@@ -4,10 +4,10 @@
     <title>Websocket ChatRoom</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/dist/css/bootstrap.min.css">
+    <link href="/webjars/bootstrap/4.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         [v-cloak] {
             display: none;
@@ -27,9 +27,9 @@
         <div class="input-group-prepend">
             <label class="input-group-text">내용</label>
         </div>
-        <input type="text" class="form-control" v-model="message" v-on:keypress.enter="sendMessage">
+        <input class="form-control" type="text" v-model="message" v-on:keypress.enter="sendMessage">
         <div class="input-group-append">
-            <button class="btn btn-primary" type="button" @click="sendMessage">보내기</button>
+            <button @click="sendMessage" class="btn btn-primary" type="button">보내기</button>
         </div>
     </div>
     <ul class="list-group">
@@ -52,64 +52,41 @@
     var reconnect = 0;
     // vue.js
     var vm = new Vue({
-        el: '#app',
+        el  : '#app',
         data: {
-            roomId: '',
-            room: {},
-            sender: '',
-            message: '',
+            roomId  : '',
+            room    : {},
+            sender  : '',
+            message : '',
             messages: []
         },
         created() {
             this.roomId = localStorage.getItem('wschat.roomId');
             this.sender = localStorage.getItem('wschat.sender');
             this.findRoom();
-            this.initMSG();
         },
         methods: {
-            findRoom: function () {
+            findRoom   : function () {
                 axios.get('/chat/room/' + this.roomId).then(response => {
                     this.room = response.data;
                 });
             },
             sendMessage: function () {
                 ws.send("/app/chat/message", {}, JSON.stringify({
-                    type: 'TALK',
-                    roomId: this.roomId,
-                    sender: this.sender,
+                    type   : 'TALK',
+                    roomId : this.roomId,
+                    sender : this.sender,
                     message: this.message
                 }));
                 this.message = '';
             },
             recvMessage: function (recv) {
                 this.messages.unshift({
-                    "type": recv.type,
-                    "sender": recv.type == 'ENTER' ? '[알림]' : recv.sender,
+                    "type"   : recv.type,
+                    "sender" : recv.type == 'ENTER' ? '[알림]' : recv.sender,
                     "message": recv.message
                 })
             },
-            initMSG: function () {
-                this.messages.unshift({
-                    "type": "TALK",
-                    "sender": "user1",
-                    "message": "test1"
-                })
-                this.messages.unshift({
-                    "type": "TALK",
-                    "sender": "user1",
-                    "message": "test2"
-                })
-                this.messages.unshift({
-                    "type": "TALK",
-                    "sender": "user1",
-                    "message": "test3"
-                })
-                this.messages.unshift({
-                    "type": "TALK",
-                    "sender": "user2",
-                    "message": "test1"
-                })
-            }
         }
     });
 
@@ -121,10 +98,16 @@
                 vm.recvMessage(recv);
             });
             ws.send("/app/chat/message", {}, JSON.stringify({
-                type: 'ENTER',
+                type  : 'ENTER',
                 roomId: vm.$data.roomId,
                 sender: vm.$data.sender
             }));
+            axios.get('/mongo/' + vm.$data.roomId).then(response => {
+                let msgs = response.data;
+                for (let i = 0; i < msgs.length; i++) {
+                    vm.recvMessage(msgs[i]);
+                }
+            });
         }, function (error) {
             if (reconnect++ <= 5) {
                 setTimeout(function () {
@@ -137,11 +120,11 @@
         });
     }
 
-    connect();
+    connect()
 
     function disconnect_test() {
         ws.send("/app/chat/message", {}, JSON.stringify({
-            type: 'OUT',
+            type  : 'OUT',
             roomId: vm.$data.roomId,
             sender: vm.$data.sender
         }));
